# InterK_final_project

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  docker-compose.yml  pyproject.toml
dbapi2/: Dockerfile  README.md  connection.py  pyproject.toml  test.py  utils.py
dbapi2/src/dbcsv/: __init__.py  connection.py
dbcsv/: Dockerfile  __init__.py  requirements.txt
dbcsv/app/: dependencies.py  main.py
dbcsv/app/api/routes/: auth.py  query.py  websocket.py
dbcsv/app/api/schemas/: auth.py  sql_request.py
dbcsv/app/core/: config.py  database_engine.py  sql_validator.py
dbcsv/app/core/dbapi2/: connection.py  exception.py  utils.py
dbcsv/app/core/parser/: parser.py  sql_grammar.lark
dbcsv/app/core/storage_layer/: datatypes.py  metadata.py  query_executor.py  test.py  test_lark.py  utils.py
dbcsv/app/core/storage_layer/iterator/: filter_iterator.py  project_iterator.py  table_iterator.py
dbcsv/app/core/storage_layer/logical_plan/: filter.py  logical_plan.py  project.py  scan.py
dbcsv/app/security/: auth.py
dbcsv/data/: accounts.json
dbcsv/data/db1/: metadata.yaml  table3.csv
dbcsv/data/db2/: metadata.yaml
dbcsv/data/schema1/: metadata.yaml  table1.csv  table2.csv
dbcsv/data/schema2/: table2.csv
dbcsv/data/testing/: metadata.yaml
dbcsv/scripts/: test.py
dbcsv/test/: sql_validator_test.py  test.py
dbcsv/tests/unit/parser/: test_parser.py
test/: dbapi_test.py  test_client_sql.py
