[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbcsv"
version = "0.1.0"
description = "A PEP‑249‑compliant HTTP‑based DB‑API driver"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name="Bach Mai", email="maixuanbach174@gmail.com" }]
dependencies = [
  "requests>=2.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Database",
  "Framework :: DB-API :: PEP 249",
]
